--- a/src/app/ui/test/test.component.html
+++ b/src/app/ui/test/test.component.html
@@ -67,12 +67,12 @@
                             <li>
                                 <mdl-icon class="np-align-vertical-middle np-text-color-primary-light">phonelink_ring</mdl-icon>
                                 <button class="np-font-open-sans np-font-12 np-font-light np-text-color-white" mdl-button mdl-ripple [mdl-tooltip]="_mCopyToClipboard"
-                                    clipboard="{{_mContactMobile}}" (clipboardCopy)="onCopied(_mContactMobile)">+91-821 786 2643</button>
+                                    clipboard="{{_mContactMobile}}" >+91-821 786 2643</button>
                             </li>
                             <li>
                                 <mdl-icon class="np-align-vertical-middle np-text-color-primary-light">mail_outline</mdl-icon>
                                 <button class="np-font-open-sans np-font-12 np-font-light np-text-color-white" mdl-button mdl-ripple [mdl-tooltip]="_mCopyToClipboard"
-                                    clipboard="{{_mContactEmail}}" (clipboardCopy)="onCopied(_mContactEmail)">nirajprakash13@gmail.com</button>
+                                    clipboard="{{_mContactEmail}}">nirajprakash13@gmail.com</button>
                             </li>
                         </ul>
                     </div>
