--- a/src/app/ui/footer/footer.component.html
+++ b/src/app/ui/footer/footer.component.html
@@ -10,9 +10,7 @@
     <div class="footer-content np-flex-container ">
         <div class="footer-left-section">
             <ul class="footer-link-list font-comfortaa">
-                <li><a>About</a></li>
-                <li><a>|</a></li>
-                <li><a>Contact</a></li>
+                <li><a clipboard="{{_mShareString}}" (clipboardCopy)="onCopied(_mShareString)" class="share-link np-text-color-white">Share</a></li>
             </ul>
 
         </div>
@@ -32,6 +30,11 @@
                 <li>
                     <button (click)="onClickOpenlink(_mSocialLink.instagram)" mdl-button mdl-button-type="icon">
                         <i class="icon-instagram socialicon np-text-color-white"></i>
+                    </button>
+                </li>
+                <li>
+                    <button (click)="onClickOpenlink(_mSocialLink.behance)" mdl-button mdl-button-type="icon">
+                        <i class="icon-behance socialicon np-text-color-white"></i>
                     </button>
                 </li>
             </ul>
