--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -18,6 +18,10 @@
   padding-top: 16px;
 }
 
+.np-padding-top-12{
+  padding-top: 12px;
+}
+
 .np-padding-bottom-32{
   padding-bottom: 32px;
 }
@@ -50,6 +54,10 @@
 
 .np-padding-left-8{
   padding-left: 8px;
+}
+
+.np-padding-left-0{
+  padding-left: 0px;
 }
 
 
